Fix Filter label alignment and Load more button styles

--- a/ui/src/components/common/button/button.scss
+++ b/ui/src/components/common/button/button.scss
@@ -10,6 +10,11 @@
     &.primary {
         border: 1px solid #002B56;
         font-size: 12px;
+
+        &.disabled {
+            border: 1px solid #E6E6E6;
+            color: #C8C8C8;
+        }
     }
 
     &.secondary {
